contacs - css javascript and markup changes - getting closer - need to get spacing between names and details cleaned up - need to fix border on box

--- a/contacts/contacts.css
+++ b/contacts/contacts.css
@@ -1,12 +1,59 @@
-dl, dt, dd{
+/* resets */
+body {
+    font-family: helvetica;
+    font-size: 14px;
+}
+dl, dt, dd, h1, ul {
     margin: 0;
     padding: 0;
 }
+
+/* candy coating */
+.widgetContainer {
+    border: #5f86be solid 1px; 
+    border-radius: 10px;
+    width: 300px;
+}
+.widgetContainer ul {
+    padding: 6px 0;
+}
+.widgetContainer dl {
+    padding: 0 10px;
+}
+.widgetContainer h1 {
+    background-color: #e0edfe; /* fallback */
+    background-image: linear-gradient(to left, #e0edfe, #edf2fa);
+    font-size: 17px;
+    margin: 0;
+    padding: 5px 10px;
+}
+.widgetContainer {
+    border-radius: 10px;
+}
+.widgetContainer h1 {
+    border-radius: 10px 10px 0 0;
+}
+.widgetContainer div {
+    border-radius: 0 0 10px 10px;
+}
+.widgetContainer .dropdown {
+    background-color: #e0edfe; /* fallback */
+    background-image: linear-gradient(to top, #e0edfe, #ffffff);
+    overflow: auto;
+	width: 100%
+}
+.widgetContainer select {
+    float: right;
+    margin: 6px
+}
+
+/* functional css */
 .contacts > dl {
     position: relative;
+    padding-bottom: 2px
 }
 .contacts .name {
-    width: 6em;
+    width: 140px;
 }
 .contacts .address span {
     display: block;
@@ -54,28 +101,44 @@ dl, dt, dd{
     white-space: nowrap;
     width: auto;
 }
+.contacts > dl,
+.contacts > dl .details {
+    border: transparent solid 1px; 
+}
+.contacts > dl:hover {
+    border: #5f86be solid 1px; 
+}
+.contacts > dl:hover .details {
+    border-right: #5f86be solid 1px;
+    border-bottom: #5f86be solid 1px; 
+}
 .contacts > dl:hover,
 .contacts > dl:hover .details {
-    background-color: lightpink; /* slightly different color for the un-pinned hover state */
+    background-color: #f2f2f2; /* slightly different color for the un-pinned hover state */
     z-index: 2;
 }
 .contacts > .pinned,
 .contacts > .pinned .details,
 .contacts > .pinned:hover,
 .contacts > .pinned:hover .details { /* slightly different color for the pinned state */
-    background-color: pink;
+    background-color: #e9e9e9;
     z-index: 2;
+    box-shadow: 3px 7px 14px 7px #cccccc; 
+}
+.contacts > .pinned .details,
+.contacts > .pinned:hover .details {
+    box-shadow: 3px 28px 30px -8px #cccccc; 
 }
 
 .phoneFirst .pinned .details .email,
 .phoneFirst > dl:hover .details .email {
     position: relative;
-    top: 18px;
+    top: 16px; /* two more than the font-size */
 }
 .phoneFirst .pinned .details .phone,
 .phoneFirst > dl:hover .details .phone {
     position: relative;
-    top: -18px;
+    top: -16px; /* two more than the font-size */
 }
 
 /* CSS Transitions - not important so only using the non-browser targeted version - also not sure if I like them, but felt like playing :) */
